--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Leap Day theme
-description: Leap Day is a theme for GitHub Pages.
+title: Welcome to My World!
+description: This is a personal page for zzm.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-leap-day
